# spsw

./: .gitignore  README.md  build-all-native.sh  deploy.sh  header-template-lgpl-java.txt  install.sh  pom.xml
cnf/: central.xml
de.ibapl.spsw.api/: .classpath  .gitignore  .project  bnd.bnd  pom.xml
de.ibapl.spsw.api.tests/: pom.xml
de.ibapl.spsw.api/elf-headers/: README
de.ibapl.spsw.elfreader/: pom.xml
de.ibapl.spsw.jnhwprovider/: pom.xml
de.ibapl.spsw.jniprovider/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  bnd.bnd  build-cross-linux.sh  build-freebsd.sh  build-macos.sh  build-native.sh  build-openbsd.sh  build_native.sh  config.h.in  configure  configure.ac  cross-compile-setup-debian.sh  cross-linux-linux.sh  delete-native-libs.sh  pom.xml
de.ibapl.spsw.jniprovider/jni-includes/Windows/: jni_md.h
de.ibapl.spsw.jniprovider/jni-includes/macOS/: jni.h  jni_md.h
de.ibapl.spsw.jniprovider/m4/: sw_lib_prefix_suffix.m4  sw_multiarchtupel.m4
de.ibapl.spsw.jniprovider/src/: Makefile.am  Makefile.in
de.ibapl.spsw.jniprovider/src/main/: Makefile.am  Makefile.in
de.ibapl.spsw.jniprovider/src/main/java/: module-info.java
de.ibapl.spsw.jniprovider/src/main/java/de/ibapl/spsw/jniprovider/: AbstractSerialPortSocket.java  GenericTermiosSerialPortSocket.java  GenericWinSerialPortSocket.java  MultiarchTupelBuilder.java  SerialPortSocketFactoryImpl.java  SpswNativeLibLoader.java  package-info.java
de.ibapl.spsw.jniprovider/src/main/native/: AbstractSerialPortSocketIO.c  Exceptions.c  GenericWinSerialPortSocket.c  Makefile.am  Makefile.in  SerialPortSocketFactoryImpl.c  TermiosCommon.c  TermiosIO.c  TermiosSettings.c  WinApiCommon.c  WinApiIO.c  WinApiSettings.c  spsw-jni.c  spsw-jni.h
de.ibapl.spsw.jniprovider/src/main/native/include/: de_ibapl_spsw_jniprovider_AbstractSerialPortSocket.h  de_ibapl_spsw_jniprovider_GenericTermiosSerialPortSocket.h  de_ibapl_spsw_jniprovider_GenericTermiosSerialPortSocket_FdCleaner.h  de_ibapl_spsw_jniprovider_GenericWinSerialPortSocket.h  de_ibapl_spsw_jniprovider_GenericWinSerialPortSocket_FdCleaner.h
de.ibapl.spsw.jniprovider/src/main/native/posix_termios_wrapper/: GenericTermiosSerialPortSocket.c
de.ibapl.spsw.jniprovider/src/main/native/windows_comport_wrapper/: GenericWinSerialPortSocket.c
de.ibapl.spsw.jniprovider/src/main/resources/de/ibapl/spsw/jniprovider/: spsw.properties
de.ibapl.spsw.jniprovider/src/main/resources/lib/aarch64-linux-gnu/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/aarch64-openbsd-bsd/: libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/arm-linux-gnueabi/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/arm-linux-gnueabihf/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/i386-linux-gnu/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/mips-linux-gnu/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/mips64-linux-gnuabi64/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/mips64el-linux-gnuabi64/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/mipsel-linux-gnu/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/powerpc64le-linux-gnu/: libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/riscv64-linux-gnu/: libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/s390x-linux-gnu/: libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/x86_64-darwin-bsd/: libjnhw-spsw.1.dylib.sh  libjnhw-spsw.3.dylib.sh  libspsw.1.dylib  libspsw.3.dylib
de.ibapl.spsw.jniprovider/src/main/resources/lib/x86_64-freebsd-bsd/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/x86_64-linux-gnu/: libspsw.so.0  libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/main/resources/lib/x86_64-openbsd-bsd/: libspsw.so.1  libspsw.so.3
de.ibapl.spsw.jniprovider/src/test/java/de/ibapl/spsw/jniprovider/: MultiarchTupelBuilderTest.java  SerialPortSocketTest.java
de.ibapl.spsw.jniprovider/src/test/java/de/ibapl/spsw/tests/: ChannelTests.java  OnePortTest.java  PrintPortCapabillitiesMain.java  ReadWriteAllParitiesTest.java  ReadWriteAllSpeedsTest.java  ReadWriteBufferSizesTest.java  ReadWriteRtsCtsTests.java  SendDataMain.java  SendDataSingleMain.java  TwoPortsBaselineRxTxTest.java  TwoPortsBaselineTest.java
de.ibapl.spsw.jniprovider/src/test/java/de/ibapl/spsw/testsjni/: AsyncChannelTests.java  ChannelTests.java  OnePortTest.java  PrintPortCapabillitiesMain.java  ReadWriteAllParitiesTest.java  ReadWriteAllSpeedsTest.java  ReadWriteBufferSizesTest.java  ReadWriteRtsCtsTests.java  SendDataMain.java  SendDataSingleMain.java  TwoPortsBaselineRxTxTest.java  TwoPortsBaselineTest.java
de.ibapl.spsw.jniprovider/src/test/resources/: .gitignore  junit-spsw-config.properties.template
de.ibapl.spsw.jnrprovider/: pom.xml
de.ibapl.spsw.provider/: .classpath  .project  bnd.bnd  build_native.sh  cross-compile-setup-debian.sh  nbactions.xml  pom.xml
de.ibapl.spsw.provider.osgi-integration-tests/: pom.xml  spsw.bndrun
de.ibapl.spsw.provider.osgi-tests/: bnd.bnd  pom.xml
it/: pom.xml
it/ascii-demo/: pom.xml
it/channel-read-demo/: pom.xml
it/channel-write-demo/: pom.xml
it/print-ports/: pom.xml
it/stream-read-demo/: pom.xml
it/stream-write-demo/: pom.xml
libspsw-linux-amd64/: pom.xml
libspsw-linux-armhf/: pom.xml
libspsw-linux-i386/: pom.xml
parent/: pom.xml
spsw/: pom.xml
spsw-bundle/: pom.xml
spsw-java/: pom.xml
spsw-native/: pom.xml
spsw-native/libspsw-linux-amd64/: pom.xml
spsw-native/libspsw-linux-armhf/: pom.xml
spsw-native/libspsw-linux-i386/: pom.xml
spsw-native/spsw-windows-x86/: pom.xml
spsw-nativelibs-bundle/: pom.xml
spsw-tests/: pom.xml
spsw-windows-x86/: pom.xml
spsw-windows-x86_64/: pom.xml
(+1728 files in other folders)
